k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lwp
  labels:
    app.kubernetes.io/name: lwp
